[project]
name = "demo"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastmcp>=3.4.2",
    "langchain>=1.3.11",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "numexpr>=2.14.1",
    "pydantic>=2.13.4",
    "qdrant-client>=1.18.0",
]
